// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > Should match snapshot - screen 1`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
     
    Roronoa
     
  </h1>
  <h3>
     
    Zoro
     
  </h3>
  <p
    class="mi-favorita"
  >
     
    Elden Ring, My Hero, Prince of Persia
     
  </p>
  <h1>
     
    Activo
     
  </h1>
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px;"
  >
    {"zipCode":"67671","country":"Wano Kuni"}
  </p>
</div>
`;

exports[`MyAwesomeApp > Should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
       
      Roronoa
       
    </h1>
    <h3>
       
      Zoro
       
    </h3>
    <p
      class="mi-favorita"
    >
       
      Elden Ring, My Hero, Prince of Persia
       
    </p>
    <h1>
       
      Activo
       
    </h1>
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px;"
    >
      {"zipCode":"67671","country":"Wano Kuni"}
    </p>
  </div>
</div>
`;
